jira/jira.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira
  labels:
    app: jira
  namespace: jira
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: jira
  template:
    metadata:
      labels:
        app: jira
    spec:
      containers:
        - name: jira
          image: repo.payrad.org/atlassian/jira-software:9.12.2-devops
          volumeMounts:
            - name: jira-data-volume
              mountPath: /var/atlassian/application-data/jira
            - name: jira-logs-volume
              mountPath: /var/atlassian/application-data/jira/log
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "4Gi"
              cpu: "2"

      volumes:
        - name: jira-data-volume
          persistentVolumeClaim:
            claimName: jira-data-pv-claim
        - name: jira-logs-volume
          persistentVolumeClaim:
            claimName: jira-logs-pv-claim

      imagePullSecrets:
        - name: payrad-repo
