jira/jira-database-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jira-postgres-svc
  namespace: jira
spec:
  selector:
    name: jira-postgres
  type: ClusterIP
  ports:
  - name: db
    port: 5432
    targetPort: 5432
    protocol: TCP
