jira/jira-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jira
  labels:
    app: jira
  namespace: jira
spec:
  selector:
    app: jira
  type: ClusterIP
  ports:
  - name: jira-port
    port: 80
    targetPort: 8080
    protocol: TCP
