jira/jira-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: jira
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      
spec:
  rules:
    - host: jira.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jira
                port:
                  number: 8080
  ingressClassName: nginx
